--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+# Model extension
+*.h5
+
+# Model Data Directory
+saved_model/
+training_1/
+training_2/
+
 # Distribution / packaging
 .Python
 build/
